@@ -26,8 +26,11 @@
  * @return string |void
  * @uses smarty_make_timestamp()
  */
-function smarty_modifier_date_format($string, $format = SMARTY_RESOURCE_DATE_FORMAT, $default_date = '',$formatter='auto')
+function smarty_modifier_date_format($string, $format=null, $default_date='', $formatter='auto')
 {
+    if ($format === null) {
+        $format = Smarty::$_DATE_FORMAT;
+    }
     /**
     * Include the {@link shared.make_timestamp.php} plugin
     */
