@@ -22,7 +22,7 @@
  */
 function smarty_modifier_replace($string, $search, $replace)
 {
-    if (SMARTY_MBSTRING /* ^phpunit */&&empty($_SERVER['SMARTY_PHPUNIT_DISABLE_MBSTRING'])/* phpunit$ */) {
+    if (Smarty::$_MBSTRING) {
         require_once(SMARTY_PLUGINS_DIR . 'shared.mb_str_replace.php');
         return smarty_mb_str_replace($search, $replace, $string);
     }
