@@ -20,7 +20,7 @@
 */
 function smarty_modifiercompiler_count_words($params, $compiler)
 {
-    if (SMARTY_MBSTRING /* ^phpunit */&&empty($_SERVER['SMARTY_PHPUNIT_DISABLE_MBSTRING'])/* phpunit$ */) {
+    if (Smarty::$_MBSTRING) {
         // return 'preg_match_all(\'#[\w\pL]+#u\', ' . $params[0] . ', $tmp)';
         // expression taken from http://de.php.net/manual/en/function.str-word-count.php#85592
         return 'preg_match_all(\'/\p{L}[\p{L}\p{Mn}\p{Pd}\\\'\x{2019}]*/u\', ' . $params[0] . ', $tmp)';
