@@ -30,7 +30,7 @@ function smarty_modifiercompiler_wordwrap($params, $compiler)
         $params[3] = 'false';
     } 
     $function = 'wordwrap';
-    if (SMARTY_MBSTRING /* ^phpunit */&&empty($_SERVER['SMARTY_PHPUNIT_DISABLE_MBSTRING'])/* phpunit$ */) {
+    if (Smarty::$_MBSTRING) {
         if ($compiler->tag_nocache | $compiler->nocache) {
             $compiler->template->required_plugins['nocache']['wordwrap']['modifier']['file'] = SMARTY_PLUGINS_DIR .'shared.mb_wordwrap.php';
             $compiler->template->required_plugins['nocache']['wordwrap']['modifier']['function'] = 'smarty_mb_wordwrap';
