@@ -21,7 +21,7 @@ if (version_compare(PHP_VERSION, '5.2.3', '>=')) {
     function smarty_function_escape_special_chars($string)
     {
         if (!is_array($string)) {
-            $string = htmlspecialchars($string, ENT_COMPAT, SMARTY_RESOURCE_CHAR_SET, false);
+            $string = htmlspecialchars($string, ENT_COMPAT, Smarty::$_CHARSET, false);
         }
         return $string;
     }  
