@@ -15,7 +15,7 @@
  */
 function smarty_variablefilter_htmlspecialchars($source, $smarty)
 {
-    return htmlspecialchars($source, ENT_QUOTES, SMARTY_RESOURCE_CHAR_SET);
+    return htmlspecialchars($source, ENT_QUOTES, Smarty::$_CHARSET);
 }
 
 ?>
